--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -39,7 +39,9 @@
             android:layout_marginRight="3dp"
             android:text="0"
             android:id="@+id/b_option1"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:textColor="@color/text_c"
+            android:background="@color/b_active" />
 
         <Button
             android:layout_width="60dp"
@@ -48,7 +50,9 @@
             android:layout_marginRight="3dp"
             android:text="0"
             android:id="@+id/b_option2"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:textColor="@color/text_c"
+            android:background="@color/b_active" />
 
         <Button
             android:layout_width="60dp"
@@ -57,7 +61,9 @@
             android:layout_marginRight="3dp"
             android:text="0"
             android:id="@+id/b_option3"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:textColor="@color/text_c"
+            android:background="@color/b_active" />
 
         <Button
             android:layout_width="60dp"
@@ -66,7 +72,9 @@
             android:layout_marginRight="3dp"
             android:text="0"
             android:id="@+id/b_option4"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:textColor="@color/text_c"
+            android:background="@color/b_active" />
 
         <Button
             android:layout_width="60dp"
@@ -75,7 +83,9 @@
             android:layout_marginRight="3dp"
             android:text="0"
             android:id="@+id/b_option5"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:textColor="@color/text_c"
+            android:background="@color/b_active" />
     </LinearLayout>
 
     <LinearLayout
@@ -93,7 +103,9 @@
             android:layout_marginRight="3dp"
             android:text="0"
             android:id="@+id/b_equation_element1"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:textColor="@color/text_c"
+            android:background="@color/b_active" />
 
         <TextView
             android:layout_width="20dp"
@@ -113,7 +125,9 @@
             android:layout_marginRight="3dp"
             android:text="0"
             android:id="@+id/b_equation_element2"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:textColor="@color/text_c"
+            android:background="@color/b_active" />
 
         <TextView
             android:layout_width="20dp"
