--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:id="@+id/img_logo"
         android:background="@drawable/logo_android"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true" />
 
     <ImageButton
@@ -25,19 +25,6 @@
         android:id="@+id/button_sound"
         android:background="@drawable/volume_android"
         android:clickable="true"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/button_sett"
-        android:layout_toStartOf="@+id/button_sett"
-        android:layout_marginRight="15dp"
-        android:layout_marginEnd="15dp" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_sett"
-        android:background="@drawable/settings_android"
-        android:layout_marginRight="5dp"
-        android:layout_marginEnd="5dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -48,8 +35,8 @@
         android:id="@+id/button_ng"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/button"
-        android:text="New Game"
+        android:background="@drawable/b_menu"
+        android:text="Play"
         android:textColor="@color/text_c" />
 
     <Button
@@ -60,7 +47,7 @@
         android:layout_alignRight="@+id/button_ng"
         android:layout_alignEnd="@+id/button_ng"
         android:layout_marginTop="40dp"
-        android:background="@drawable/button"
+        android:background="@drawable/b_menu"
         android:textColor="@color/text_c"
         android:text="High Score" />
 
