--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,40 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.okay_pc.myapplication.MainActivity"
-    android:background="@color/bg">
+    android:background="@color/dark_blue">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/img_logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="104dp">
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:id="@+id/button_ng"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:background="@color/blue"
+            android:text="@string/play_button"
+            android:textSize="22sp"
+            android:textColor="@color/warm_gray" />
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:id="@+id/button_hs"
+            android:layout_below="@+id/button_ng"
+            android:layout_alignRight="@+id/button_ng"
+            android:layout_alignEnd="@+id/button_ng"
+            android:layout_marginTop="40dp"
+            android:background="@color/blue"
+            android:textColor="@color/warm_gray"
+            android:textSize="22sp"
+            android:text="@string/high_score_button" />
+    </LinearLayout>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -28,28 +61,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_ng"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/b_menu"
-        android:text="Play"
-        android:textColor="@color/text_c" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_hs"
-        android:layout_below="@+id/button_ng"
-        android:layout_alignRight="@+id/button_ng"
-        android:layout_alignEnd="@+id/button_ng"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/b_menu"
-        android:textColor="@color/text_c"
-        android:text="High Score" />
 
 
 </RelativeLayout>
