--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="b_active">#036564</color>
     <color name="b_inactive">#033649</color>
     <color name="text_c">#ffffff</color>
+    <color name="warm_gray">#b3c3c7</color>
+    <color name="cyan">#2d99e0</color>
+    <color name="dark_cyan">#2b71b3</color>
+    <color name="blue">#294273</color>
+    <color name="dark_blue">#001133</color>
 </resources>
