--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -20,23 +20,23 @@
         android:id="@+id/ll_options" >
 
         <Button
-            style="@style/Button"
+            style="@style/ClickableButton"
             android:id="@+id/b_option1" />
 
         <Button
-            style="@style/Button"
+            style="@style/ClickableButton"
             android:id="@+id/b_option2" />
 
         <Button
-            style="@style/Button"
+            style="@style/ClickableButton"
             android:id="@+id/b_option3" />
 
         <Button
-            style="@style/Button"
+            style="@style/ClickableButton"
             android:id="@+id/b_option4" />
 
         <Button
-            style="@style/Button"
+            style="@style/ClickableButton"
             android:id="@+id/b_option5" />
     </LinearLayout>
 
@@ -50,7 +50,7 @@
         android:layout_centerHorizontal="true">
 
         <Button
-            style="@style/Button"
+            style="@style/FreeButton"
             android:id="@+id/b_equation_element1" />
 
         <TextView
@@ -59,7 +59,7 @@
             android:text="@string/equation_plus" />
 
         <Button
-            style="@style/Button"
+            style="@style/FreeButton"
             android:id="@+id/b_equation_element2" />
 
         <TextView
@@ -69,7 +69,7 @@
             android:visibility="gone" />
 
         <Button
-            style="@style/Button"
+            style="@style/FreeButton"
             android:id="@+id/b_equation_element3"
             android:visibility="gone" />
 
@@ -80,7 +80,7 @@
             android:visibility="gone" />
 
         <Button
-            style="@style/Button"
+            style="@style/FreeButton"
             android:id="@+id/b_equation_element4"
             android:visibility="gone" />
     </LinearLayout>
@@ -111,7 +111,7 @@
             android:text="0"
             android:id="@+id/tv_result"
             android:textSize="55sp"
-            android:textColor="@color/text_c"
+            android:textColor="@color/pure_white"
             android:layout_gravity="center" />
 
     </FrameLayout>
@@ -139,7 +139,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
             android:textSize="25sp"
-            android:textColor="@color/warm_gray"
+            android:textColor="@color/pure_white"
             android:id="@+id/tv_score_value" />
     </LinearLayout>
 
