--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="bg">#031634</color>
     <color name="b_active">#036564</color>
     <color name="b_inactive">#033649</color>
-    <color name="text_c">#ffffff</color>
+    <color name="dark_gray">#999999</color>
+    <color name="pure_white">#ffffff</color>
     <color name="warm_gray">#b3c3c7</color>
     <color name="cyan">#2d99e0</color>
     <color name="dark_cyan">#2b71b3</color>
