--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,5 +43,10 @@
         <item name="android:textColor">@color/pure_white</item>
         <item name="android:textSize">22sp</item>
     </style>
-
+    <style name="Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_margin">15dp</item>
+        <item name="android:background">@color/cyan</item>
+    </style>
 </resources>
