--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -17,7 +17,8 @@
         android:layout_marginBottom="50dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:id="@+id/ll_options" >
+        android:id="@+id/ll_options"
+        android:weightSum="1.0">
 
         <Button
             style="@style/ClickableButton"
